[gd_scene load_steps=5 format=3 uid="uid://dkcy2c2xksr35"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_gqkos"]
[ext_resource type="Theme" uid="uid://b1ryrqpgbp0bm" path="res://resources/new_theme.tres" id="1_u44sq"]
[ext_resource type="Theme" uid="uid://kjn2uye2qn6e" path="res://resources/mosquePageTheme.tres" id="3_whpi7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mels7"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_u44sq")
script = ExtResource("1_gqkos")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.407843, 0.258824, 0.313726, 1)

[node name="amountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -240.0
offset_bottom = 110.0
grow_horizontal = 0
text = "999/999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 126.145)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_mels7")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -307.0
offset_top = -55.0725
offset_right = 308.0
offset_bottom = 54.9275
grow_horizontal = 2
grow_vertical = 2
text = "Iqama Json Editor v0.5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 165.415)
layout_mode = 2
size_flags_vertical = 4
placeholder_text = "search..."

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
modulate = Color(0, 0.937255, 0.890196, 1)
custom_minimum_size = Vector2(731.065, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "add new mosque"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="mosqueEditPage" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_whpi7")

[node name="ColorRect" type="ColorRect" parent="mosqueEditPage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.243137, 0.243137, 0.243137, 1)

[node name="MarginContainer" type="MarginContainer" parent="mosqueEditPage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="mosqueEditPage/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="VBoxContainer" type="VBoxContainer" parent="mosqueEditPage/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="mosqueNameLabel" type="Label" parent="mosqueEditPage/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 101
text = "mosque name"
autowrap_mode = 3
max_lines_visible = 2

[node name="Label" type="Label" parent="mosqueEditPage/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 101
text = "mosque details:"

[node name="HBoxContainer2" type="HBoxContainer" parent="mosqueEditPage/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="mosqueEditPage/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "arabic Name:"
vertical_alignment = 1

[node name="ArabicNameTextEdit" type="TextEdit" parent="mosqueEditPage/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
placeholder_text = "اسم المسجد:"

[node name="HBoxContainer3" type="HBoxContainer" parent="mosqueEditPage/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="mosqueEditPage/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "block:"
vertical_alignment = 1

[node name="BlockTextEdit" type="TextEdit" parent="mosqueEditPage/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "block"

[node name="HBoxContainer4" type="HBoxContainer" parent="mosqueEditPage/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="mosqueEditPage/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "location(lon,lat):"
vertical_alignment = 1

[node name="LonTextEdit" type="TextEdit" parent="mosqueEditPage/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "lon"

[node name="LatTextEdit" type="TextEdit" parent="mosqueEditPage/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "lat"

[node name="HBoxContainer5" type="HBoxContainer" parent="mosqueEditPage/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="mosqueEditPage/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "fajr Iqama:"
vertical_alignment = 1

[node name="FajrIqamaTextEdit" type="TextEdit" parent="mosqueEditPage/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "fajr Iqama"

[node name="HBoxContainer6" type="HBoxContainer" parent="mosqueEditPage/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="mosqueEditPage/MarginContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
text = "dhuhr Iqama:"
vertical_alignment = 1

[node name="DhuhrIqamaTextEdit" type="TextEdit" parent="mosqueEditPage/MarginContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "dhuhr Iqama"

[node name="HBoxContainer7" type="HBoxContainer" parent="mosqueEditPage/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="mosqueEditPage/MarginContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
text = "asr Iqama:"
vertical_alignment = 1

[node name="AsrIqamaTextEdit" type="TextEdit" parent="mosqueEditPage/MarginContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "asr Iqama"

[node name="HBoxContainer8" type="HBoxContainer" parent="mosqueEditPage/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="mosqueEditPage/MarginContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2
text = "maghrib Iqama:"
vertical_alignment = 1

[node name="MaghribIqamaTextEdit" type="TextEdit" parent="mosqueEditPage/MarginContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "maghrib Iqama"

[node name="HBoxContainer9" type="HBoxContainer" parent="mosqueEditPage/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="mosqueEditPage/MarginContainer/VBoxContainer/HBoxContainer9"]
layout_mode = 2
text = "isha Iqama:"
vertical_alignment = 1

[node name="IshaIqamaTextEdit" type="TextEdit" parent="mosqueEditPage/MarginContainer/VBoxContainer/HBoxContainer9"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "isha Iqama"

[node name="HBoxContainer10" type="HBoxContainer" parent="mosqueEditPage/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="mosqueEditPage/MarginContainer/VBoxContainer/HBoxContainer10"]
layout_mode = 2
text = "edit date:"
vertical_alignment = 1

[node name="EditDateTextEdit" type="TextEdit" parent="mosqueEditPage/MarginContainer/VBoxContainer/HBoxContainer10"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "edit date"

[node name="saveButton" type="Button" parent="mosqueEditPage/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(402.89, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "save"

[node name="backButton" type="Button" parent="mosqueEditPage/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(316.155, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "back"

[node name="addMosquePage" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_whpi7")

[node name="ColorRect" type="ColorRect" parent="addMosquePage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.290196, 0.215686, 0.282353, 1)

[node name="MarginContainer" type="MarginContainer" parent="addMosquePage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="addMosquePage/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="VBoxContainer" type="VBoxContainer" parent="addMosquePage/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="addNewMosque" type="Label" parent="addMosquePage/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 101
text = "add new mosque"
horizontal_alignment = 1
autowrap_mode = 3
max_lines_visible = 2

[node name="Label" type="Label" parent="addMosquePage/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 101
text = "mosque details:"

[node name="HBoxContainer3" type="HBoxContainer" parent="addMosquePage/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="addMosquePage/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Mosque name"
vertical_alignment = 1

[node name="AddMosqueName" type="TextEdit" parent="addMosquePage/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Mosque name"

[node name="HBoxContainer2" type="HBoxContainer" parent="addMosquePage/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="addMosquePage/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "arabic Name:"
vertical_alignment = 1

[node name="AddArabicNameTextEdit" type="TextEdit" parent="addMosquePage/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
placeholder_text = "اسم المسجد"

[node name="HBoxContainer5" type="HBoxContainer" parent="addMosquePage/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="addMosquePage/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "block:"
vertical_alignment = 1

[node name="AddBlockTextEdit" type="TextEdit" parent="addMosquePage/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "block"

[node name="HBoxContainer4" type="HBoxContainer" parent="addMosquePage/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="addMosquePage/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "location(lat, lon):"
vertical_alignment = 1

[node name="AddLocTextEdit" type="TextEdit" parent="addMosquePage/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "lat, lon"

[node name="HBoxContainer10" type="HBoxContainer" parent="addMosquePage/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="addMosquePage/MarginContainer/VBoxContainer/HBoxContainer10"]
layout_mode = 2
text = "edit date:"
vertical_alignment = 1

[node name="AddEditDateTextEdit" type="TextEdit" parent="addMosquePage/MarginContainer/VBoxContainer/HBoxContainer10"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "edit date"

[node name="ErrorLabel" type="Label" parent="addMosquePage/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.839216, 0.360784, 0.360784, 1)
theme_override_font_sizes/font_size = 101
horizontal_alignment = 1
autowrap_mode = 3
max_lines_visible = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="addMosquePage/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 60

[node name="addButton" type="Button" parent="addMosquePage/MarginContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(402.89, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Add"

[node name="backButton" type="Button" parent="addMosquePage/MarginContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(316.155, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "back"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="mosqueEditPage/MarginContainer/VBoxContainer/saveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="mosqueEditPage/MarginContainer/VBoxContainer/backButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="addMosquePage/MarginContainer/VBoxContainer/VBoxContainer2/addButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="addMosquePage/MarginContainer/VBoxContainer/VBoxContainer2/backButton" to="." method="_on_back_button_pressed"]
